syntax = "proto3";

package auth;

option go_package = "github.com/manhrev/runtracking/backend/auth/pkg/api;auth";
import "google/protobuf/empty.proto";
import "api/auth.proto";

service AuthI {
    rpc GetAllUsers(google.protobuf.Empty) returns (GetAllUsersReply) {};
    rpc GetUserByIds(GetByIdsRequest) returns (GetAllUsersReply) {};
}


message GetAllUsersReply{
    repeated UserInfo users = 1;
}

message GetByIdsRequest{
    repeated int64 ids = 1;
}
